# edgebench

./: .gitignore  .gitmodules  LICENSE  README.md  analyze.py  client.py  dlr_interpreter.py  hailo_interpreter.py  hhb_interpreter.py  manager.py  mmpose_eval.py  ort_interpreter.py  pck_eval.py  requirements.txt  shared.py
final_reports/: idle_energy.json  model_summary.json
final_reports/beaglevahead/: 0-ViTPose-mobileone_s0_mpii-256x256-light_v17_uint8_asym_hbb.zip_accuracy.json  0-ViTPose-mobileone_s0_mpii-256x256-light_v17_uint8_asym_hbb.zip_latency.json  0-ViTPose-mobileone_s1-mpii-256x256-light_v17_uint8_asym_hbb.zip_accuracy.json  0-ViTPose-mobileone_s1-mpii-256x256-light_v17_uint8_asym_hbb.zip_latency.json  0-ViTPose-mobileone_s4-mpii-256x256-light_v17_uint8_asym_hbb.zip_accuracy.json  0-ViTPose-mobileone_s4-mpii-256x256-light_v17_uint8_asym_hbb.zip_latency.json
final_reports/beaglevahead_int16/: 0-ViTPose-mobileone_s0_mpii-256x256-light_v17_int16_sym_hbb.zip_accuracy.json  0-ViTPose-mobileone_s0_mpii-256x256-light_v17_int16_sym_hbb.zip_latency.json  0-ViTPose-mobileone_s1-mpii-256x256-light_v17_int16_sym_hbb.zip_accuracy.json  (+1 more)
interpreters/: base_interpreter.py  dlr_interpreter.py  executorch_interpreter.py  hailo_interpreter.py  hhb_interpreter.py  ort_interpreter.py  tflite_interpreter.py  tvm_interpreter.py
micro_client/coralmicro/: CMakeLists.txt  coralipstack.h  coraltimer.h  edge_bench_client.cc  edge_bench_client.h  main.cc  mqtt.cc  mqtt.h
micro_client/esp32/main/: CMakeLists.txt  edge_bench_client.cc  edge_bench_client.h  heap_manager.cc  heap_manager.h  i2c_comm.cc  i2c_comm.h  main.c  main.cc  mqtt_config.h  mqtt_topic.h  wifi_config.h.example
test_data/: sample_input_nchw.npy
(+271 files in other folders)
